...
                    if (source != null) {
                      // _loadAndGoToCredentials(source);
                      await navigator.push(CredentialsScreen.route(source));
                    }
                  },
                  child: ListTile(
                    key: const ValueKey('downloadFromUrl'),
                    leading: const FaIcon(FontAwesomeIcons.fileCode),
                    title: Text(loc.loadFromRemoteUrl),
                  ),
                ),
              ];
            },
...
                child: _loadingFile != null
                    ? const Padding(
                        padding: EdgeInsets.all(32),
                        child: AuthPassProgressIndicator(),
                      )
                    : LinkButton(
                        key: const ValueKey('continue'),
                        onPressed: () async {
                          await _tryUnlock();
                        },
                        child: Text(loc.dialogContinue),
                      ),
              ),
...
